--- a/css/typography.css
+++ b/css/typography.css
@@ -71,7 +71,7 @@ textarea { padding: 10px 0 0 10px; border-radius: .25rem; }
 6 Title
 -----------------------------------------------------------------------*/
 .title-box .title { font-weight: 600; letter-spacing: 2px; position: relative; z-index: -1; }
-.title-box span { text-shadow: 0 10px 10px rgba(0, 0, 0, .15); font-weight: 800; color: #2c539e; }
+.title-box span { text-shadow: 0 10px 10px rgba(0, 0, 0, .15); font-weight: 800; color: black; }
 .title-box p {font-size: 17px; line-height: 2em; }
 /*---------------------------------------------------------------------
 7 Button
