--- a/css/style.css
+++ b/css/style.css
@@ -291,11 +291,11 @@ footer .logo { width: 160px; }
 8 Breadcrumbs
 -----------------------------------------------------------------------*/
 .breadcrumbs { position: relative; padding: 200px 0 120px 0; /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#feccb1+0,f17432+50,ea5507+51,fb955e+100;Red+Gloss+%232 */
-background: #feccb1; /* Old browsers */
-background: -moz-linear-gradient(top,  #feccb1 0%, #f17432 50%, #ea5507 51%, #fb955e 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  #feccb1 0%,#f17432 50%,#ea5507 51%,#fb955e 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  #feccb1 0%,#f17432 50%,#ea5507 51%,#fb955e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feccb1', endColorstr='#fb955e',GradientType=0 ); /* IE6-9 */}
+background: black; /* Old browsers */
+/* background: -moz-linear-gradient(top,  #feccb1 0%, #f17432 50%, #ea5507 51%, #fb955e 100%); FF3.6-15 */
+/* background: -webkit-linear-gradient(top,  #feccb1 0%,#f17432 50%,#ea5507 51%,#fb955e 100%); Chrome10-25,Safari5.1-6 */
+/* background: linear-gradient(to bottom,  #feccb1 0%,#f17432 50%,#ea5507 51%,#fb955e 100%); W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+}
 .breadcrumbs .banner-img { position: relative; bottom: -120px; z-index: 99; }
 .breadcrumbs-after { bottom: -2px; left: 0; width: 100%; height: 100px; position: absolute; z-index: 9; }
 .breadcrumbs .title { font-weight: 600; color: #ffffff; margin-bottom: 0; line-height: 40px; }
