--- a/css/style.css
+++ b/css/style.css
@@ -364,7 +364,7 @@ background: black; /* Old browsers */
 13 Contact Page
 -----------------------------------------------------------------------*/
 .iq-contactbox .no-spec { padding: 0; }
-.iq-contactbox .contact-bg { border-radius: 6px; background: rgb(30,87,153); /* Old browsers */ background: -moz-linear-gradient(left, rgba(30,87,153,1) 0%, rgba(32,124,202,1) 100%);	 /* FF3.6-15 */ background: -webkit-linear-gradient(left, rgba(30,87,153,1) 0%, rgba(32,124,202,1) 100%);	 /* Chrome10-25,Safari5.1-6 */ background: linear-gradient(to right, rgba(30,87,153,1) 0%, rgba(32,124,202,1) 100%);	  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='rgba(30,87,153,1)', endColorstr='rgba(32,124,202,1)', GradientType=1);	   /* IE6-9 */ padding: 30px; }
+.iq-contactbox .contact-bg { border-radius: 6px; background: #a2a2a2;/* IE6-9 */ padding: 30px; }
 .iq-contactbox iframe { min-height: 240px; }
 .contact-footer { padding: 60px 0 30px; }
 .iq-contactbox .iq-contact { position: relative; margin-bottom: 20px; }
