--- a/css/responsive.css
+++ b/css/responsive.css
@@ -86,7 +86,7 @@ header.menu-sticky .navbar-light .navbar-nav .nav-item:hover a:before, header.me
 .iq-works { margin-top: 0 !important; }
 .works-box .top-img1.i-size { width: 45%; }
 .how-it-works { text-align: center; }
-#banner1 { background-image: url(../images/banner/HomePageBanner_Mob_410x570_dull.jpg) !important; }
+/* #banner1 { background-image: url(../images/banner/HomePageBanner_Mob_410x570_dull.jpg) !important; } */
 }
 
 
